docs: expand README.md with detailed features, launch profiles, and guide